--- a/commerce/src/Components/Products/Products.css
+++ b/commerce/src/Components/Products/Products.css
@@ -1,8 +1,35 @@
-.entire{
-    display: flex;
-    flex-direction: row;
-    
-}
 .procard{
-    margin: 100px 5px 100px 5px;
+    margin: 60px 5px 18px 23px;   
+ 
+}
+.title{
+    color:rgb(0, 106, 255);
+    margin-left: 40%;
+
+}
+.color{
+    background-color:#343d46;
+    color:#f9f1f1;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-size:large;  
+
+}
+.buy{
+    background-color:#65737e;
+    color:#ffff;
+    /* margin-left: 5px; */
+    padding: 8px;
+    border-radius: 13px;
+    border: none;
+}
+.add{
+    background-color:#bae1ff;
+    color:#000000;
+    margin-left: 60px;
+    padding: 8px;
+    border-radius: 13px;
+    border: none;
+}
+.single{
+    text-decoration: none;
 }
