--- a/commerce/src/component/Register/Register.css
+++ b/commerce/src/component/Register/Register.css
@@ -1,7 +1,8 @@
 .register {
   min-width: 100vw;;
  min-height: 100vh;
- background: url("../../assets/register-background.png");
+ /* background: url("../../assets/register-background.png"); */
+ background-color: #242726;
  margin: 0;
  padding: 0;
  border: 0;
@@ -28,6 +29,7 @@
   border-radius: 20px;
   margin-left: 0px;
   padding-top: 8%;
+  
   /* margin-top: 20%; */
   /* box-shadow: 0 0 20px ; */
 }
