--- a/commerce/src/Components/Checkout/CheckoutForm.css
+++ b/commerce/src/Components/Checkout/CheckoutForm.css
@@ -15,11 +15,12 @@
 .form-groups input {
  height: 35px;
  width: 400px;
-
+border-radius: 10px;
 }
 .address input{
   width: 400px;
   height: 140px;
+  border-radius: 10px;
 }
 .details button {
  border: 1px;
@@ -58,6 +59,7 @@
 .pincode input{
   height: 35px;
   width: 150px;
+  border-radius: 5px;
 }
 
 
@@ -75,6 +77,10 @@
 
 }
 
+h2{
+  margin-left: 180px;
+}
+
 .checkoutt form {
   text-align: center;
 }
@@ -88,6 +94,7 @@
 .state input{
   width:150px;
   height: 35px;
+  border-radius: 5px;
 }
 
 .data-side {
@@ -110,6 +117,7 @@
   margin-left: 1rem;
   height: 2rem;
   width: 2rem;
+  border-radius: 5px;
 }
 
 
