--- a/commerce/src/Components/Products/Products.css
+++ b/commerce/src/Components/Products/Products.css
@@ -3,6 +3,7 @@
  
 }
 .title{
+    margin-top: 100px;
     color:rgb(0, 106, 255);
     margin-left: 40%;
 }
@@ -13,22 +14,35 @@
     font-size:large;  
 
 }
-.buy{
-    background-color:#65737e;
-    color:#ffff;
-    /* margin-left: 5px; */
-    padding: 8px;
-    border-radius: 13px;
-    border: none;
-}
 .add{
     background-color:#bae1ff;
     color:#000000;
-    margin-left: 60px;
+    width: 7vw;
+    margin-right: 48px;
     padding: 8px;
     border-radius: 13px;
     border: none;
 }
 .single{
     text-decoration: none;
+}
+.add:hover{
+    box-shadow: 0 0 8px #65737e ;
+}
+.previous{
+    background-color:#735F32;
+    color:#000000;
+    width: 7vw;
+    height: 3vw;
+    padding: 8px;
+    border-radius: 13px;
+    margin: 20px 20px 0 20px;
+    border: none;
+}
+.previous:hover{
+    box-shadow: 0 0 8px #735F32;
+}
+.pages{
+    display: flex;
+    justify-content: center ;
 }
