--- a/commerce/src/Components/SingleProduct/SingleProduct.css
+++ b/commerce/src/Components/SingleProduct/SingleProduct.css
@@ -2,6 +2,8 @@
     background-color: #242726;    
     display: flex;
     height: 100vh;
+
+
     
 }
 .image{
@@ -13,7 +15,7 @@
     margin: 10% 0 0 10%;
 }
 .child{
-    margin-top: 17%;
+    margin-top: 8%;
 }
 .range{
     font-size: x-large;
@@ -27,10 +29,10 @@
 .addc{
     background-color:#65737e;
     color:#ffff;
-    /* margin-left: 5px; */
     padding: 8px;
     border-radius: 13px;
     border: none;
+  
 }
 .addc:hover{
     box-shadow: 0 0 8px #65737e ;
@@ -48,4 +50,11 @@
     color:#000000;
     box-shadow: 0 0 8px #bae1ff;
 
+}
+.clicked{
+    height: 7vh;
+    width: 15vw;
+    background-color:rgb(9, 118, 213) ;
+    color: black;
+    margin-top: 100px;
 }
